# elizaos-cpp

./: .gitignore  AGENTSHELL_IMPLEMENTATION.md  ANALYSIS.md  ANALYSIS_FINDINGS.md  ANALYSIS_REPORT.md  CHARACTERS_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CMAKE_CONFIGURATION_GUIDE.md  CMAKE_INTEGRATION_GUIDE.md  CMakeLists.txt  COMPLETED_IMPLEMENTATIONS.md  COMPLETENESS_REPORT.md  COMPLETION_REPORT.md  CPP_ADAPTATION_ASSESSMENT.md  CPP_ADAPTATION_NEXT_STEPS.md  CPP_ADAPTATION_QUICK_REFERENCE.md  CPP_ADAPTATION_SUMMARY.md  CPP_FUNCTIONAL_COMPLETENESS_REPORT.md  CURRENT_EXECUTION_STATUS.md  CURRENT_STATUS.md  EVALUATION_SUMMARY.md  FINAL_REPORT.md  FIXES_APPLIED.md  FUNCTIONAL_COMPLETION_REPORT.md  FUNCTION_IMPLEMENTATION_REPORT.md  HAT_THEORG_DATABASE_SCHEMA.md  HAT_THEORG_IMPLEMENTATION_PLAN.md  HEADER_MODIFICATION_GUIDE.md  HYBRID_TRANSPILER_DESIGN.md  HYBRID_TRANSPILER_TEST_RESULTS.md  HYBRID_TRANSPILER_USAGE_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATES.md  IMPLEMENTATION_VISUAL_SUMMARY.txt  INTEGRATION_COMPLETE.md  (+75 more)
cpp/: CMakeLists.txt
cpp/agentbrowser/: CMakeLists.txt  CMakeLists_INTEGRATED.txt  CMakeLists_REAL.txt
cpp/agentbrowser/src/: agentbrowser.cpp  agentbrowser_mock_backup.cpp  agentbrowser_real.cpp  agentbrowser_real_COMPLETE.cpp  html_parser.cpp  http_client.cpp
cpp/agentlogger/src/: agentlogger.cpp
cpp/agentloop/src/: agentloop.cpp
cpp/agentmemory/src/: agentmemory.cpp  attention.cpp
cpp/autofun_idl/: CMakeLists.txt  README.md
cpp/autofun_idl/examples/: CMakeLists.txt  autofun_idl_demo.cpp
cpp/autofun_idl/src/: autofun_idl.cpp
cpp/autofun_idl/tests/: test_autofun_idl.cpp
cpp/autonomous_starter/: CMakeLists.txt
cpp/autonomous_starter/src/: autonomous_starter.cpp  demo.cpp
cpp/awesome_eliza/: CMakeLists.txt
cpp/awesome_eliza/src/: awesome_eliza.cpp
cpp/brandkit/: CMakeLists.txt
cpp/brandkit/src/: brandkit.cpp  brandkit_COMPLETE.cpp
cpp/characterfile/: CMakeLists.txt
cpp/characterfile/src/: characterfile.cpp  placeholder.cpp
cpp/characters/: CMakeLists.txt
cpp/characters/src/: character_json_loader.cpp  placeholder.cpp
cpp/classified/: CMakeLists.txt
cpp/classified/src/: classified_COMPLETE.cpp  placeholder.cpp
cpp/core/include/: uuid_generator.hpp
cpp/discord_summarizer/: CMakeLists_INTEGRATED.txt  CMakeLists_REAL.txt
cpp/discord_summarizer/include/: discord_client_real.hpp
cpp/discord_summarizer/src/: discord_client_real.cpp  discord_client_real_COMPLETE.cpp  discord_summarizer.cpp
cpp/discrub_ext/src/: discrub_ext.cpp
cpp/easycompletion/src/: easycompletion.cpp
cpp/eliza/: CMakeLists.txt
cpp/eliza/src/: placeholder.cpp
cpp/eliza_3d_hyperfy_starter/: CMakeLists.txt  test_eliza_3d_hyperfy_starter.cpp
cpp/eliza_3d_hyperfy_starter/src/: eliza_3d_hyperfy_starter.cpp  eliza_3d_hyperfy_starter_COMPLETE.cpp  placeholder.cpp
cpp/eliza_nextjs_starter/: CMakeLists.txt
cpp/eliza_nextjs_starter/src/: eliza_nextjs_starter.cpp  eliza_nextjs_starter_COMPLETE.cpp
cpp/eliza_plugin_starter/: CMakeLists.txt
cpp/eliza_plugin_starter/src/: eliza_plugin_starter.cpp  eliza_plugin_starter_COMPLETE.cpp
cpp/eliza_starter/: CMakeLists.txt  integration_example.cpp
cpp/eliza_starter/src/: eliza_starter.cpp
cpp/elizaos_github_io/: CMakeLists.txt
cpp/elizaos_github_io/src/: elizaos_github_io.cpp  placeholder.cpp
cpp/elizas_list/src/: elizas_list.cpp
cpp/elizas_world/: CMakeLists.txt
cpp/elizas_world/src/: elizas_world.cpp
cpp/embodiment/src/: console_text_interface.cpp  embodiment_manager.cpp  file_sensory_interface.cpp  mock_motor_interface.cpp  perception_action_loop.cpp
cpp/evolutionary/src/: evolutionary.cpp
cpp/generated_api/: CMakeLists.txt
cpp/generated_api/include/: s3Client.hpp
cpp/generated_api/src/: s3Client.cpp
cpp/generated_auth/: CMakeLists.txt
cpp/generated_auth/include/: acceptAuthority.hpp  auth.hpp  embed-author-object.hpp  getAllTokens.hpp  getTokenPriceChart.action.hpp  token-registration-listener-solana.hpp  tokenData.hpp  tokenPrice.hpp  (+1 more)
cpp/generated_cli/: CMakeLists.txt
cpp/generated_database/: CMakeLists.txt
cpp/generated_docs/: CMakeLists.txt
cpp/generated_misc/: CMakeLists.txt
cpp/generated_plugins/: CMakeLists.txt
cpp/generated_services/: CMakeLists.txt
cpp/generated_testing/: CMakeLists.txt
cpp/generated_trade/: CMakeLists.txt
cpp/generated_ui/: CMakeLists.txt
cpp/generated_utils/: CMakeLists.txt
cpp/generated_websocket/: CMakeLists.txt
cpp/goal_manager/: CMakeLists.txt
cpp/hat/: CMakeLists.txt  CMakeLists_WITH_DEPENDENCIES.txt
cpp/knowledge/: CMakeLists.txt
cpp/livevideochat/: CMakeLists.txt
cpp/mcp_gateway/: CMakeLists.txt
cpp/ontogenesis/: CMakeLists.txt
cpp/otaku/: CMakeLists.txt
cpp/otc_agent/: CMakeLists.txt
cpp/plugin_specification/: CMakeLists.txt
cpp/sweagent/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  CMakeLists_awesome_test.txt  agentaction_test.cpp  agentagenda_test.cpp  agentbrowser_test.cpp  agentcomms_test.cpp  agentlogger_test.cpp  agentloop_test.cpp  agentmemory_test.cpp  agentshell_test.cpp  auto_fun_test.cpp  autofun_idl_test.cpp  autonomous_starter_test.cpp  awesome_eliza_test.cpp  brandkit_test.cpp  characterfile_test.cpp  characters_test.cpp  classified_test.cpp  comprehensive_e2e_test.cpp  core_test.cpp  discord_summarizer_test.cpp  discrub_ext_test.cpp  easycompletion_test.cpp  eliza_3d_hyperfy_starter_test.cpp  eliza_nextjs_starter_test.cpp  eliza_plugin_starter_test.cpp  eliza_starter_test.cpp  eliza_test.cpp  elizaos_github_io_test.cpp  elizas_list_test.cpp  elizas_world_test.cpp  embodiment_test.cpp  evolutionary_test.cpp  goal_manager_test.cpp  hat_test.cpp  hats_test.cpp  knowledge_test.cpp  livevideochat_test.cpp  ljspeechtools_test.cpp  mcp_gateway_test.cpp  (+14 more)
cpp/the_org/: CMakeLists.txt  CMakeLists_WITH_DEPENDENCIES.txt
cpp/trust_scoreboard/: CMakeLists.txt
cpp/vercel_api/: CMakeLists.txt
cpp/website/: CMakeLists.txt
cpp/workgroups/: CMakeLists.txt
(+7266 files in other folders)
